# OneDriveCLI

./: .gitignore  .gitmodules  CLICommands.py  MSALATPersistence.py  MSALATPersistenceAdapter.py  MSALPersonalAccountToken.py  Makefile  OneDriveCLI.py  OneDriveSynch.py  OneDriveTokenHandler.py  OneDriveTokenHandlerr.py  README.md  TinyAcceptorHTTPServer.py  TinyAcceptorServer.py  main.py  notes.txt  odc  ods  pyproject.toml  test.py  test_.py  token_data.txt
src/OneDriveCLI/: OneDriveCLI.py  odc
unit-tests/: conftest.py  test_absolute_path.py  test_cd.py  test_db.py  test_init.py  test_path_wrangler.py
